first feature renderScore

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <h1>Quiz Application</h1>
             <ul class = "quiz-score-info">
-                <li>Question: <span class="js-question">3</span> / <span class="js-uestion-possible">10</span></li>
-                <li>Score: <span class="js-score">2</span> / <span class="js-score-possible" >10</span></li>
+                <li>Question: <span class="js-question"></span> / <span class="js-question-possible"></span></li>
+                <li>Score: <span class="js-score"></span> / <span class="js-score-possible" ></span></li>
             </ul>
         </header>
         <main> 
