--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             </ul>
         </header>
         <main> 
-            <div class="box start-quiz">
+            <div class="box js-start-quiz hide-me">
                 <h2>Welcome to the NBA quiz</h2>
-                <form action="">
+                <form  action="">
                     <legend>NBA QUIZ LANDING PAGE</legend>
-                    <button type="submit">Start The Quiz</button>
+                    <button class= "js-start-form" type="submit">Start The Quiz</button>
                 </form>
             </div>
             
-            <div class="box question-form hide-me">
+            <div class="box js-question-form hide-me">
                 <h2>Welcome To question 3 </h2>
                 <form action="">
                     <legend>This is the third question</legend>
@@ -36,7 +36,7 @@
                     <button type="submit">Save Answer</button>
                 </form>
             </div>
-            <div class= "box answer-page hide-me">
+            <div class= "box js-answer-page hide-me">
                 <h2>Answer Page</h2>
                 <p>You have got the question: Wrong</p>
                 <p>Correct answer is</p>
@@ -44,7 +44,7 @@
                     <button type="submit">Next Question</button>
                 </form>
             </div>
-            <div class = "box ending-quiz hide-me">
+            <div class = "box js-ending-quiz hide-me">
                 <h2>Thank you for taking the test</h2>
                 <p>Your Final Score: <span class="js-final-score"></span> / <span class="js-final-score-possible"></span></p>
             </div>
