Completed Restart quiz at the end of the quiz

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <div class = "box js-ending-quiz hide-me">
                 <h2>Thank you for taking the test</h2>
                 <p>Your Final Score: <span class="js-final-score"></span> / <span class="js-final-score-possible"></span></p>
+                <form action="">
+                    <legend>Ready to try again?</legend>
+                    <button class= "js-restart-quiz-button" type="submit">Restart Quiz</button>
+                </form>
             </div>
         </main>
         <script src="data.js" ></script>
