working on handling answer input form user

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             </div>
             
             <div class="box js-question-form hide-me">
+                <h2 class="js-question-heading"></h2>
+                <form action="">
+                    <legend class="js-question-legend"></legend>
+                    <input type="radio" id="answer-0" name="answer" value="0" checked> <span class="js-choice-0"></span><br>
+                    <input type="radio" id="answer-1" name="answer" value="1"><span class="js-choice-1"></span><br>
+                    <input type="radio" id="answer-2" name="answer" value="2"><span class="js-choice-2"></span><br>
+                    <input type="radio" id="answer-3" name="answer" value="3"><span class="js-choice-3"></span><br>
+                    <button type="submit">Submit Answer</button>
+                </form>
             </div>
             <div class= "box js-answer-page hide-me">
                 <h2>Answer Page</h2>
