--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Quiz Application</h1>
             <ul class = "quiz-score-info">
                 <li>Question: <span class="js-question"></span> / <span class="js-question-possible"></span></li>
-                <li>Score: <span class="js-score"></span> / <span class="js-score-possible" ></span></li>
+                <li>Score: <span class="js-score"></span></li>
             </ul>
         </header>
         <main> 
