target question page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang=en>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
@@ -30,12 +30,12 @@
             
             <div class="box js-question-form hide-me">
                 <h2 class="js-question-heading"></h2>
-                <form action="">
+                <form class="choices-form" action="">
                     <legend class="js-question-legend"></legend>
-                    <input type="radio" id="answer-0" name="answer" value="0" checked> <span class="js-choice-0"></span><br>
-                    <input type="radio" id="answer-1" name="answer" value="1"><span class="js-choice-1"></span><br>
-                    <input type="radio" id="answer-2" name="answer" value="2"><span class="js-choice-2"></span><br>
-                    <input type="radio" id="answer-3" name="answer" value="3"><span class="js-choice-3"></span><br>
+                    <input class="choice-single" type="radio" id="answer-0" name="answer" value="0" checked> <span class="js-choice-0"></span><br>
+                    <input class="choice-single" type="radio" id="answer-1" name="answer" value="1"><span class="js-choice-1"></span><br>
+                    <input class="choice-single" type="radio" id="answer-2" name="answer" value="2"><span class="js-choice-2"></span><br>
+                    <input class="choice-single" type="radio" id="answer-3" name="answer" value="3"><span class="js-choice-3"></span><br>
                     <button class="js-submit-asnwer-button" type="submit">Submit Answer</button>
                 </form>
             </div>
