--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main> 
             <div class="box js-start-quiz hide-me">
                 <h2>Welcome to the NBA quiz</h2>
-                <form  action="">
+                <form class="start-form"  action="">
                     <legend>What are you waiting for?</legend>
                     <button class= "js-start-form" type="submit">Start The Quiz</button>
                     <img id="tip-off" src="http://www1.pictures.gi.zimbio.com/Pau+Gasol+NBA+Finals+Game+4+Boston+Celtics+1xURArl2_B1l.jpg" alt="Celtics vs Lakers tipoff start of game">
