--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form role="form" class="start-form"  action="">
                     <legend>What are you waiting for?</legend>
                     <button role="button" class= "js-start-form" type="submit">Start The Quiz</button>
-                    <img role="img" id="tip-off" src="https://www1.pictures.gi.zimbio.com/Pau+Gasol+NBA+Finals+Game+4+Boston+Celtics+1xURArl2_B1l.jpg" alt="Celtics vs Lakers tipoff start of game">
+                    <img role="img" id="tip-off" src="http://www1.pictures.gi.zimbio.com/Pau+Gasol+NBA+Finals+Game+4+Boston+Celtics+1xURArl2_B1l.jpg" alt="Celtics vs Lakers tipoff start of game">
                 </form>
             </section>
             
