sizing for question

--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
             </section>
             
             <section class="box js-question-form hide-me">
-                <h2 aria-level=2 role="heading" class="js-question-heading"></h2>
-                <form role="form" class="choices-form" action="">
-                    <p class="js-question-legend"></p>
-                    <input class="choice-single" type="radio" id="answer-0" name="answer" value="0" checked> <span class="js-choice-0"></span><br>
-                    <input class="choice-single" type="radio" id="answer-1" name="answer" value="1"><span class="js-choice-1"></span><br>
-                    <input class="choice-single" type="radio" id="answer-2" name="answer" value="2"><span class="js-choice-2"></span><br>
-                    <input class="choice-single" type="radio" id="answer-3" name="answer" value="3"><span class="js-choice-3"></span><br>
-                    <button role="button" class="js-submit-asnwer-button" type="submit">Submit Answer</button>
-                </form>
+                <div class=question-box>
+                    <h2 aria-level=2 role="heading" class="js-question-heading"></h2>
+                
+                    <form role="form" class="choices-form" action="">
+                        <p class="js-question-legend"></p>
+                        <input class="choice-single" type="radio" id="answer-0" name="answer" value="0" checked> <span class="js-choice-0"></span><br>
+                        <input class="choice-single" type="radio" id="answer-1" name="answer" value="1"><span class="js-choice-1"></span><br>
+                        <input class="choice-single" type="radio" id="answer-2" name="answer" value="2"><span class="js-choice-2"></span><br>
+                        <input class="choice-single" type="radio" id="answer-3" name="answer" value="3"><span class="js-choice-3"></span><br>
+                        <button role="button" class="js-submit-asnwer-button" type="submit">Submit Answer</button>
+                    </form>
+                </div>
             </section>
             <section class= "box js-answer-page hide-me">
             </section>
